--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -47,7 +47,7 @@
 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>/WEB-INF/jsp/main.jsp</welcome-file>
 	</welcome-file-list>
 	<error-page>
 		<error-code>500</error-code>
